...
          weight={400}
          fontFamily="Overpass-Medium"
          color={Color.white}>
          Amanhã
        </Text>
        <TouchableOpacity
          testID="onPressNavigate"
          onPress={() => navigate('details')}>
          <Row horizontal={15}>
            <Text
              size={15}
              weight={400}
              fontFamily="Overpass-Medium"
...
            </Svg>
          </Row>
        </TouchableOpacity>
      </Row>
      <Margin height={20} />
      <ScrollView
        testID="AllTowmorrowList"
        horizontal
        contentContainerStyle={{flexGrow: 1, justifyContent: 'center'}}
        showsHorizontalScrollIndicator={false}>
        {data?.list.map((item: IList, index: number) => (
          <View key={item.dt}>
            {isTomorrow(new Date(item.dt_txt)) && (
...
