...
  return (
    <Row style={{width: '100%'}} align="center">
      <Card
        style={{flex: 1}}
        paddingTop={paddingTop}
        onPress={() => navigate('search')}
        testID="navigateSearch"
        background={
          forecastConditionsIcons(
            'chuvisco',
            period(currentHour).isMiddle,
            period(currentHour).isMorning,
          ).color
...
                dispatch(getWeather({lat, lon}));
                dispatch(getWeatherToday({lat, lon}));
              } else {
                onPress();
              }
            }}
            testID="reload">
            <ReloadIcon />
          </TouchableOpacity>
        </>
      )}
    </Row>
  );
...
